# shorts-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  verify_data.py
.gitea/workflows/: deploy.yml  test.yml
data/: README.md
data/quotes/: reels_cytat.csv
src/: __init__.py
src/generators/: __init__.py  slide_renderer.py  video_generator.py
src/models/: __init__.py  quote.py  video.py
src/utils/: __init__.py  database.py
